--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "twitter": "^1.7.1",
     "unistore": "^3.5.1"
   },
   "scripts": {
